; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/test/esp32/extr_test_pwm.c_judge_count_value.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/test/esp32/extr_test_pwm.c_judge_count_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GPIO_PWMA_PCNT_INPUT = common dso_local global i32 0, align 4
@PCNT_CTRL_FLOATING_IO1 = common dso_local global i32 0, align 4
@GPIO_PWMB_PCNT_INPUT = common dso_local global i32 0, align 4
@PCNT_CTRL_FLOATING_IO2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @judge_count_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @judge_count_value(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* @GPIO_PWMA_PCNT_INPUT, align 4
  %8 = load i32, i32* @PCNT_CTRL_FLOATING_IO1, align 4
  %9 = call i32 @pcnt_count(i32 %7, i32 %8, i32 1000)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* @GPIO_PWMB_PCNT_INPUT, align 4
  %11 = load i32, i32* @PCNT_CTRL_FLOATING_IO2, align 4
  %12 = call i32 @pcnt_count(i32 %10, i32 %11, i32 1000)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @TEST_ASSERT_INT16_WITHIN(i32 %13, i32 %14, i32 %15)
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @TEST_ASSERT_INT16_WITHIN(i32 %17, i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @pcnt_count(i32, i32, i32) #1

declare dso_local i32 @TEST_ASSERT_INT16_WITHIN(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
